--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "sirv": "^1.0.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
@@ -31,6 +32,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/lodash-es": "^4.17.5",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
