--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "d3-shape": "^2.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "sirv": "^1.0.0",
@@ -31,6 +32,7 @@
     "@rollup/plugin-url": "^5.0.0",
     "@tsconfig/svelte": "^2.0.1",
     "@types/compression": "^1.7.2",
+    "@types/d3-shape": "^3.0.2",
     "@types/express": "^4.17.13",
     "@types/lodash-es": "^4.17.5",
     "rollup": "^2.3.4",
