--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sirv": "^1.0.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
+    "winston": "^3.6.0",
     "zod": "^3.9.5"
   },
   "devDependencies": {
