--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cambio-club",
   "description": "Cambio, in the club.",
   "version": "0.0.1",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
