--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "cambio-club",
   "description": "Cambio, in the club.",
   "version": "0.0.1",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
@@ -31,6 +28,7 @@
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
